<resources>
    <string name="app_name">TDR Content Creator</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="login">Login</string>
    <string name="app_availability">This app is only available for content creators.</string>
    <string name="please_wait">Please Wait…</string>
    <string name="fill_inputs">Please fill all required inputs.</string>
    <string name="choose">Choose</string>
    <string name="logout">Logout</string>
    <string name="account_creator_prof">TDR Account Creator (Professor)</string>
    <string name="subject">Subject*</string>
    <string name="_1s">1S (ex. 1,2)</string>
    <string name="_2sc">2Sc (ex. 1,2)</string>
    <string name="_3m">3M (ex. 1,2)</string>
    <string name="_3sc">3Sc (ex. 1,2)</string>
    <string name="_4l">4L (ex. 1,2)</string>
    <string name="_4m">4M (ex. 1,2)</string>
    <string name="_4sc">4Sc (ex. 1,2)</string>
    <string name="_4t">4T (ex. 1,2)</string>
    <string name="pin_code">PIN Code*</string>
    <string name="create">Create</string>
    <string name="pin">PIN</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="you_need_internet">You need internet connection to do this operation.</string>
    <string name="error_get_pin">Error when getting the PIN code, please retry.</string>
    <string name="wrong_pin">Wrong PIN code.</string>
    <string name="account_created">Account Created!</string>
    <string name="current_role_false">You current role don\'t allow you to use this app.</string>
    <string name="account_creator_admin">TDR Account Creator (Admin)</string>
    <string name="your_password">Your password*</string>
    <string name="change_email">Change Email Address</string>
    <string name="change">Change</string>
    <string name="updated">Updated!</string>
    <string name="change_password">Change Password</string>
    <string name="new_value">New value*</string>
</resources>