<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".activity.AccountCreatorProfessorActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextUserPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/editTextUserPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextUserPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextUserPassword" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/editTextNameFirst"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName|textCapWords"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <EditText
                android:id="@+id/editTextNameLast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName|textCapWords"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextNameFirst" />

            <EditText
                android:id="@+id/editTextSubject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/subject"
                android:inputType="textPersonName|textCapWords"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextNameLast" />

            <EditText
                android:id="@+id/editTextLevel1S"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_1s"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@+id/editTextLevel2Sc"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextSubject" />

            <EditText
                android:id="@+id/editTextLevel2Sc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_2sc"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintStart_toEndOf="@+id/editTextLevel1S"
                app:layout_constraintTop_toTopOf="@+id/editTextLevel1S" />

            <EditText
                android:id="@+id/editTextLevel3M"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_3m"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@+id/editTextLevel3Sc"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextLevel2Sc" />

            <EditText
                android:id="@+id/editTextLevel3Sc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_3sc"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintStart_toEndOf="@+id/editTextLevel3M"
                app:layout_constraintTop_toTopOf="@+id/editTextLevel3M" />

            <EditText
                android:id="@+id/editTextLevel4L"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_4l"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@+id/editTextLevel4M"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextLevel3Sc" />

            <EditText
                android:id="@+id/editTextLevel4M"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_4m"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintStart_toEndOf="@+id/editTextLevel4L"
                app:layout_constraintTop_toTopOf="@+id/editTextLevel4L" />

            <EditText
                android:id="@+id/editTextLevel4Sc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_4sc"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@+id/editTextLevel4T"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextLevel4L" />

            <EditText
                android:id="@+id/editTextLevel4T"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_4t"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintStart_toEndOf="@+id/editTextLevel4Sc"
                app:layout_constraintTop_toTopOf="@+id/editTextLevel4Sc" />

            <EditText
                android:id="@+id/editTextPINCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pin_code"
                android:inputType="textPersonName|numberPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextLevel4Sc" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:onClick="createAccount"
                android:text="@string/create"
                app:cornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPINCode" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutWaitRoot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#99000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutWait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewWait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/please_wait"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar"
                    app:layout_constraintStart_toStartOf="@+id/progressBar"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>