<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NSV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/editTextNameFirst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <EditText
            android:id="@+id/editTextNameLast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextNameFirst" />

        <EditText
            android:id="@+id/editTextSubject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/subjects"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextNameLast" />

        <EditText
            android:id="@+id/editTextLevel1S"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_1s"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextSubject" />

        <EditText
            android:id="@+id/editTextLevel2L"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_2l"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextLevel1S" />

        <EditText
            android:id="@+id/editTextLevel2Sc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/_2sc"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextLevel2L" />

        <EditText
            android:id="@+id/editTextPINCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/pin_code"
            android:inputType="textPersonName|numberPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextLevel2Sc" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorAccentDark"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextPINCode" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>