<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".activity.AccountCreatorAdminActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextUserPasswordAdmin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextEmailAdmin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextUserPasswordAdmin" />

            <EditText
                android:id="@+id/editTextPasswordAdmin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmailAdmin"
                app:layout_constraintStart_toStartOf="@+id/editTextEmailAdmin"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailAdmin"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/editTextFirstNameAdmin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName|textCapWords"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmailAdmin"
                app:layout_constraintStart_toStartOf="@+id/editTextEmailAdmin"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordAdmin" />

            <EditText
                android:id="@+id/editTextLastNameAdmin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName|textCapWords"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmailAdmin"
                app:layout_constraintStart_toStartOf="@+id/editTextEmailAdmin"
                app:layout_constraintTop_toBottomOf="@+id/editTextFirstNameAdmin" />

            <EditText
                android:id="@+id/editTextPinAdmin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pin_code"
                android:inputType="textPersonName|numberPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmailAdmin"
                app:layout_constraintStart_toStartOf="@+id/editTextEmailAdmin"
                app:layout_constraintTop_toBottomOf="@+id/editTextLastNameAdmin" />

            <Button
                android:id="@+id/buttonCreateAdmin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:onClick="createAccount"
                android:text="@string/create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPinAdmin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutWaitRootAdmin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#99000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutWait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewWait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/please_wait"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar"
                    app:layout_constraintStart_toStartOf="@+id/progressBar"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>